[package]
name = "subdomain-scan"
version = "0.1.0"
authors = ["Tremse"]
edition = "2024"

[dependencies]
futures = "0.3.31"
hickory-proto = "0.25.2"
hickory-resolver = {version = "0.25.2", features = ["tokio", "system-config"]}
tokio = "1.49.0"
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
